examples/test/testpolicy6431.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6431
  namespace: namespace497
spec:
  podSelector:
    matchLabels:
      key40: value47
      key35: value9
      key26: value4
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key20: value18
          key36: value46
          key35: value36
      podSelector:
        matchLabels:
          key49: value44
          key41: value2
